@@ -5,6 +5,7 @@ kdeartwork (4:4.6.1-0r1) UNRELEASED; urgency=low
 
   [ Modestas Vainius ]
   * Point debian/control Vcs fields to the new Git repository.
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
 
   [ Pino Toscano ]
   * Change the or'ed kdelibs-data (kde3) dependency of kdeartwork to
